# AgentManager

./: .gitignore  Agent管理器.desktop  Agent管理器.spec  README.md  pyproject.toml
.github/workflows/: release.yml
src/ai_session_manager/: __init__.py  __main__.py  app.py
src/ai_session_manager/assets/: index.html
