[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-session-manager"
version = "1.0.0"
description = "Agent 管理器 - 跨平台 Agent 管理工具（会话 / Skill / MCP）"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Agent Manager"},
]
keywords = ["ai", "session", "manager", "claude", "codex", "kimi", "pi", "hermes", "orca"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
ai-session-manager = "ai_session_manager.app:main"
ai-sm = "ai_session_manager.app:main"
Agent管理器 = "ai_session_manager.app:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-session-manager"
Issues = "https://github.com/yourusername/ai-session-manager/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_session_manager = ["assets/*"]
